--- a/.poggit.yml
+++ b/.poggit.yml
@@ -9,8 +9,7 @@ projects:
       phpstan: false
     libs:
       - src: poggit/libasynql/libasynql
-        version: ^4.1.0
-      - src: CortexPE/Commando/Commando
-        version: ^3.0.0
-        branch: PM4
+        version: 4.1.0
+      - src: KenCir/PMMPLibFormAPI/LibFormAPI
+        version: 1.1.0
 ...
